# Parallel_Computing_Kmeans_Omp_CUDA

./: README.md
kmeans_cuda_omp_project/: CMakeLists.txt  Record.h  data_centroids  data_generated  data_generator.h  kmeans_adv.cu  kmeans_adv.h  kmeans_adv_slow.cu  kmeans_omp.h  kmeans_sequential.h  main_adv.cpp  plot_adv.h
